--- a/src/css/partials/elements.css
+++ b/src/css/partials/elements.css
@@ -1,5 +1,7 @@
 /* element styling */
-*, *::before, ::after {
+*,
+*::before,
+::after {
   box-sizing: border-box;
   font-weight: normal;
   padding: 0;
@@ -20,7 +22,6 @@ header {
     font-size: 2em;
     padding-left: 1.5em;
     margin: 0.5em 0;
-    background: url(../../icons/clock.svg) no-repeat;
   }
 
 }
